<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2008 The Android Open Source Project  
  
     Licensed under the Apache License, Version 2.0 (the "License");  
     you may not use this file except in compliance with the License.  
     You may obtain a copy of the License at  
    
          http://www.apache.org/licenses/LICENSE-2.0  
    
     Unless required by applicable law or agreed to in writing, software  
     distributed under the License is distributed on an "AS IS" BASIS,  
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  
     See the License for the specific language governing permissions and  
     limitations under the License.  
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:key="parent"
    android:title="设置页面">

    <PreferenceCategory
        android:key="location_category"
        android:title="喂奶提醒设置">

        <CheckBoxPreference
            android:key="@string/setting_alarm_open_key"
            android:title="@string/setting_alarm_open_close"
            android:widgetLayout="@layout/checkbox_preference_layout"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="@string/setting_alarm_sound_key"
            android:title="@string/setting_alarm_sound_title"
            android:widgetLayout="@layout/checkbox_preference_layout"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="@string/setting_alarm_shock_key"
            android:title="@string/setting_alarm_shock_title"
            android:widgetLayout="@layout/checkbox_preference_layout"
            android:defaultValue="true" />
    </PreferenceCategory>

</PreferenceScreen>  